editor/grammar/test/corpus/expressions.txt
================================================================================
operator precedence
================================================================================

fn shorted(a: bool, value: i64) bool {
    let both = a and value > 0
    return both or (a and value < 10) or !a
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (identifier))
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    body: (block
      (variable_declaration
        name: (identifier)
        value: (binary_expression
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (number_literal))))
      (return_statement
        value: (binary_expression
          left: (binary_expression
            left: (identifier)
            right: (parenthesized_expression
              (binary_expression
                left: (identifier)
                right: (binary_expression
                  left: (identifier)
                  right: (number_literal)))))
          right: (unary_expression
            operand: (identifier)))))))

================================================================================
try, catch with a value, catch with a capture and a block
================================================================================

fn inspected(seed: i64) !i64 {
    let value = try refuse(seed)
    let supplied = refuse(seed) catch 0
    return refuse(seed) catch |err| {
        if err == error.TooMuch {
            return 100
        }
        return -1
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (error_union_type
      child: (identifier))
    body: (block
      (variable_declaration
        name: (identifier)
        value: (try_expression
          value: (call_expression
            function: (identifier)
            arguments: (arguments
              (identifier)))))
      (variable_declaration
        name: (identifier)
        value: (catch_expression
          left: (call_expression
            function: (identifier)
            arguments: (arguments
              (identifier)))
          right: (number_literal)))
      (return_statement
        value: (catch_expression
          left: (call_expression
            function: (identifier)
            arguments: (arguments
              (identifier)))
          capture: (capture
            name: (identifier))
          right: (block
            (if_statement
              condition: (binary_expression
                left: (identifier)
                right: (error_value
                  name: (identifier)))
              consequence: (block
                (return_statement
                  value: (number_literal))))
            (return_statement
              value: (unary_expression
                operand: (number_literal)))))))))

================================================================================
orelse, with a value and with a block
================================================================================

fn guarded(maybe: ?i64) i64 {
    let fallback = maybe orelse 0
    let value = maybe orelse {
        return -1
    }
    return value
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (optional_type
          child: (identifier))))
    return_type: (identifier)
    body: (block
      (variable_declaration
        name: (identifier)
        value: (orelse_expression
          left: (identifier)
          right: (number_literal)))
      (variable_declaration
        name: (identifier)
        value: (orelse_expression
          left: (identifier)
          right: (block
            (return_statement
              value: (unary_expression
                operand: (number_literal))))))
      (return_statement
        value: (identifier)))))

================================================================================
struct literals take their type from context
================================================================================

fn defaults() Limits {
    return .{
        requests: 1000,
        request_bytes: request_bytes_max,
        exponential: true,
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (identifier)
    body: (block
      (return_statement
        value: (struct_literal
          (field_initializer
            name: (identifier)
            value: (number_literal))
          (field_initializer
            name: (identifier)
            value: (identifier))
          (field_initializer
            name: (identifier)
            value: (boolean_literal)))))))

================================================================================
addresses, pointers, and the discard
================================================================================

fn drive(value: i64) {
    let held = &value
    _ = held
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (identifier)))
    body: (block
      (variable_declaration
        name: (identifier)
        value: (unary_expression
          operand: (identifier)))
      (assignment_statement
        left: (identifier)
        right: (identifier)))))
