editor/grammar/test/corpus/statements.txt
================================================================================
if, else if, else
================================================================================

fn classify(value: i64) i64 {
    if value > 100 {
        return 3
    } else if value > 10 {
        return 2
    } else {
        return 0
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    body: (block
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (number_literal))
        consequence: (block
          (return_statement
            value: (number_literal)))
        alternative: (if_statement
          condition: (binary_expression
            left: (identifier)
            right: (number_literal))
          consequence: (block
            (return_statement
              value: (number_literal)))
          alternative: (block
            (return_statement
              value: (number_literal))))))))

================================================================================
an if that captures what an optional held
================================================================================

fn tested(maybe: ?i64) i64 {
    if maybe |value| {
        return value * 2
    } else {
        return 0
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (optional_type
          child: (identifier))))
    return_type: (identifier)
    body: (block
      (if_statement
        condition: (identifier)
        capture: (capture
          name: (identifier))
        consequence: (block
          (return_statement
            value: (binary_expression
              left: (identifier)
              right: (number_literal))))
        alternative: (block
          (return_statement
            value: (number_literal)))))))

================================================================================
while, with a capture and without a condition
================================================================================

fn drain(first: ?*var Cell) i64 {
    while cursor |cell| {
        total = total + cell.value
    }
    while {
        break
    }
    return total
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (optional_type
          child: (pointer_type
            child: (identifier)))))
    return_type: (identifier)
    body: (block
      (while_statement
        condition: (identifier)
        capture: (capture
          name: (identifier))
        body: (block
          (assignment_statement
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (field_expression
                object: (identifier)
                field: (identifier))))))
      (while_statement
        body: (block
          (break_statement)))
      (return_statement
        value: (identifier)))))

================================================================================
defer, continue, and a bare return
================================================================================

fn run(arena: Arena) {
    defer arena.destroy()
    while cursor |c| {
        continue
    }
    return
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (identifier)))
    body: (block
      (defer_statement
        body: (call_expression
          function: (field_expression
            object: (identifier)
            field: (identifier))
          arguments: (arguments)))
      (while_statement
        condition: (identifier)
        capture: (capture
          name: (identifier))
        body: (block
          (continue_statement)))
      (return_statement))))
