editor/grammar/test/corpus/tokens.txt
================================================================================
three kinds of comment, told apart by the character after the slashes
================================================================================

//! about this file

/// documents the declaration below it
// an ordinary note
//// not a doc comment
let x = 1

--------------------------------------------------------------------------------

(source_file
  (file_doc_comment)
  (doc_comment)
  (comment)
  (comment)
  (variable_declaration
    name: (identifier)
    value: (number_literal)))

================================================================================
strings, and the five escapes
================================================================================

let plain = "hello"
let escaped = "line\nbreak\t\r\\\"done"

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    value: (string_literal))
  (variable_declaration
    name: (identifier)
    value: (string_literal
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
numbers in every base the checker reads
================================================================================

let decimal = 1024
let separated = 1_000_000
let hex = 0xFF
let octal = 0o755
let binary = 0b1010
let fraction = 12.5
let exponent = 1.5e+10

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal)))

================================================================================
keywords do not swallow the identifiers that start with them
================================================================================

let iffy = 1
let ordering = 2
let structure = 3

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal))
  (variable_declaration
    name: (identifier)
    value: (number_literal)))

================================================================================
error values name a member of the one universal error set
================================================================================

fn refuse(over: i64) !i64 {
    if over > 100 {
        return error.TooMuch
    }
    return over
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (error_union_type
      child: (identifier))
    body: (block
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (number_literal))
        consequence: (block
          (return_statement
            value: (error_value
              name: (identifier)))))
      (return_statement
        value: (identifier)))))
